--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>resumo</h2>
 
 
-            <div>
+            <div class="resumo_reacao">
                 <div>
                     <img src="images/icon-reaction.svg" alt="icone de reaçao">
                     <span>Reaçao</span>
@@ -38,7 +38,7 @@
                 <strong>80 / 100</strong>
             </div>
 
-            <div>
+            <div class="resumo_memoria">
                 <div>
                     <img src="images/icon-memory.svg" alt="icone de memoria">
                     <span>memoria</span>
@@ -48,7 +48,7 @@
                 <strong>92 / 100</strong>
             </div>
 
-            <div>
+            <div class="resumo_verbal">
                 <div>
                     <img src="images/icon-verbal.svg" alt="icone verbal">
                     <span>verbal</span>
@@ -57,7 +57,8 @@
 
                 <strong>61 / 100</strong>
             </div>
-            <div>
+
+            <div class="resumo_visual">
                 <div>
                     <img src="images/icon-visual.svg" alt="icone visual">
                     <span>visual/span>
